<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>session_viewer</class>
 <widget class="QWidget" name="session_viewer">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1190</width>
    <height>865</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Просмотр сеанса</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout_3">
   <item>
    <layout class="QVBoxLayout" name="viewer_vertical_layout">
     <item>
      <widget class="CustomPlot" name="viewer_custom_plot" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QVBoxLayout" name="verticalLayout_6">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_5">
       <item>
        <spacer name="verticalSpacer_2">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QGroupBox" name="groupBox_6">
         <property name="title">
          <string>Заголовок графика</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_9">
          <item>
           <widget class="QLineEdit" name="viewer_tittle_line_edit">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="maximumSize">
             <size>
              <width>380</width>
              <height>16777215</height>
             </size>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <spacer name="verticalSpacer_3">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
        <string>Описание сессии</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QTextBrowser" name="session_description_browser">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="maximumSize">
           <size>
            <width>16777215</width>
            <height>150</height>
           </size>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QTableWidget" name="viewer_minmax_values_table">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="minimumSize">
        <size>
         <width>350</width>
         <height>250</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>350</width>
         <height>230</height>
        </size>
       </property>
       <attribute name="horizontalHeaderMinimumSectionSize">
        <number>30</number>
       </attribute>
       <attribute name="horizontalHeaderDefaultSectionSize">
        <number>80</number>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
       </attribute>
       <row>
        <property name="text">
         <string>Датчик 1</string>
        </property>
       </row>
       <row>
        <property name="text">
         <string>Датчик 2</string>
        </property>
       </row>
       <row>
        <property name="text">
         <string>Датчик 3</string>
        </property>
       </row>
       <row>
        <property name="text">
         <string>Датчик 4</string>
        </property>
       </row>
       <row>
        <property name="text">
         <string>Датчик 5</string>
        </property>
       </row>
       <column>
        <property name="text">
         <string>Мин.</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>Средн.</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>Макс.</string>
        </property>
       </column>
      </widget>
     </item>
     <item>
      <spacer name="verticalSpacer_4">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_3">
       <property name="title">
        <string>Отображение графиков</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QCheckBox" name="s1_legend_checkbox">
            <property name="text">
             <string>Д1</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="checkBos2_legend_checkbox">
            <property name="text">
             <string>Д2</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="s3_legend_checkbox">
            <property name="text">
             <string>Д3</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="s4_legend_checkbox">
            <property name="text">
             <string>Д4</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QCheckBox" name="s5_legend_checkbox">
            <property name="text">
             <string>Д5</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_2">
       <property name="maximumSize">
        <size>
         <width>380</width>
         <height>16777215</height>
        </size>
       </property>
       <property name="title">
        <string>Единицы измерения</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
         <widget class="QRadioButton" name="units_rbutton1">
          <property name="text">
           <string>В/м</string>
          </property>
          <property name="checked">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="units_rbutton2">
          <property name="text">
           <string>дБмкВ/м</string>
          </property>
          <property name="checked">
           <bool>false</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="units_rbutton3">
          <property name="text">
           <string>Вт/м2</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_5">
       <property name="title">
        <string>Параметры нормы и маркеров</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_9">
        <item>
         <widget class="QCheckBox" name="viewer_norma_checkbox">
          <property name="text">
           <string>Норма</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QDoubleSpinBox" name="viewer_norma_val_spinbox">
          <property name="decimals">
           <number>4</number>
          </property>
          <property name="minimum">
           <double>-1000.000000000000000</double>
          </property>
          <property name="maximum">
           <double>1000.000000000000000</double>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="viewer_norma_unit_label">
          <property name="text">
           <string>В/м</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_4">
          <property name="text">
           <string>            </string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="marker_checkbox">
          <property name="text">
           <string>Маркеры данных</string>
          </property>
          <property name="checked">
           <bool>true</bool>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>40</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_4">
       <property name="title">
        <string>Копирование данных</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_8">
        <item>
         <widget class="QPushButton" name="viewer_copy_graph_button">
          <property name="text">
           <string>Копировать график</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="viewer_copy_data_button">
          <property name="text">
           <string>Копировать данные</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>CustomPlot</class>
   <extends>QWidget</extends>
   <header location="global">.CustomPlot</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
